tests/golden/expected/override2.stdout.txt
Compile error: tests/fixtures/lib/nativetest/nativetest.lamp:1: type error: "greet" is declared as both a native function and a Lamp function
  1 | native function string greet(string name)
    | ^
